# assemblix

./: .env.example  .env.example.quick  .gitignore  .gitleaks.toml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  LICENSE_EE.md  Makefile  NOTICE  README.md  SECURITY.md  docker-compose.app.yml  docker-compose.dev.yml  docker-compose.yml  install.sh  mkdocs.yml  release-please-config.json  setup.sh
assemblix-app-api/: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
assemblix-app-api/alembic/: README  env.py
assemblix-app-api/alembic/versions/: 2025_01_01_0000-add_api_keys_table.py  2025_12_28_1200-c497322e746b_initial.py  2025_12_29_0000-add_is_debug_to_executions.py  2026_01_02_0813-3a68f08bcc0d_add_deepsek.py  2026_01_02_1500-add_deepseek_gigachat_credentials.py  2026_01_07_0000-add_is_debug_to_chat_sessions.py  2026_01_10_0535-0fbb190c9795_add_organizaitons.py  2026_01_10_0617-ab2642f3e9ce_remove_user_id_from_executions.py  2026_01_10_0725-4b347362bc9c_nullable_to_token.py  2026_01_11_0907-d862e27715cc_add_http_block.py  2026_01_11_0934-b2e26c8495f9_add_onboarding.py  2026_01_12_1459-6f29c14b4ea3_update_migrations.py  2026_01_13_0744-ac62578cd41b_add_billing.py  2026_01_13_1325-b97582ccbc34_fix_plantier.py  2026_01_15_0846-01c0a8478c02_add_credits_to_billing.py  2026_01_15_1532-6dc619ebd9ef_delete_org_usage.py  2026_01_15_1537-5c31ad68cf4d_change_int_to_decmial.py  2026_01_15_2041-46a3a3b0d222_добавил_стоимость_в_кредитах.py  2026_01_17_0845-dccadc78a37b_add_google_provider.py  2026_01_22_0838-d62f737587b9_add_payments.py  2026_01_24_2151-c5b9682588df_fix_type.py  2026_01_28_1011-7706c3da6ed1_add_is_admin.py  2026_01_29_1331-c030bb311591_add_templates.py  2026_02_03_1437-f03e23f487d0_fix_executionstatus_enum.py  2026_02_03_1517-c749b0c8184c_add_is_debug.py  2026_02_03_2025-ce99c0da1bed_add_own_key_cost.py  2026_02_05_1212-a7776fcd12e8_add_is_test.py  2026_02_19_1252-157ffebb88d5_add_utm.py  2026_02_21_1402-3a47f9f1f48a_add_documents.py  2026_03_01_2021-75acbd323962_add_name_and_output.py  2026_03_20_1050-6243d9f0ba55_add_chat_plan_to_organizations_and_.py  2026_06_01_0523-2b83435823c3_add_notifications.py  2026_06_18_0915-e2b7416f94c0_add_queued_execution_status.py  2026_06_18_1328-0525aa73d75d_convert_execution_steps_node_type_to_.py  2026_06_19_0446-ebbf8443c420_make_executions_started_at_nullable_for_.py  2026_06_30_0117-5cc680532ef5_drop_tinkoff_recurrent_columns_from_.py  2026_07_04_0556-46ef62e3e56e_add_llm_request_to_execution_step.py  2026_07_06_1133-d6b61c70817e_add_elevenlabs_credential_type.py  2026_07_08_0150-e1a2b3c4d5f6_add_anam_token_credential_type.py  2026_07_08_0200-f7a8b9c0d1e2_add_yandex_speechkit_credential_type.py
assemblix-app-api/assemblix_api/: __init__.py  dependencies.py  enums.py  main.py
assemblix-app-api/assemblix_api/api/: __init__.py
assemblix-app-api/assemblix_api/billing/: __init__.py  credit_service.py  exceptions.py  limits.py  plans.py  rate_limit_backends.py  rate_limit_service.py  service.py
assemblix-app-api/assemblix_api/core/: auth_context.py  cel_evaluator.py  concurrency_limiter.py  encryption.py  logging.py  metrics.py  node_loader.py  node_registry.py  redis_client.py  settings.py  ssrf.py  template_evaluator.py
assemblix-app-api/assemblix_api/database/: __init__.py  engine.py
assemblix-app-api/assemblix_api/dto/: base.py
assemblix-app-api/assemblix_api/execution/: agent_runner.py  background_tasks.py  cost_accumulator.py  credential_resolver.py  dag_scheduler.py  debug_event_manager.py  debug_pubsub.py  error_taxonomy.py  exceptions.py  graph_analysis.py  graph_navigator.py  message_builder.py  node_runner.py  resume.py  stream_buffer.py  voice_gate.py  workflow_executor.py
assemblix-app-api/assemblix_api/i18n/: __init__.py  workflow_defaults.py
assemblix-app-api/assemblix_api/nodes/: __init__.py  agent_node.py  agent_voice.py  condition_node.py  delay_node.py  end_node.py  http_request_node.py  set_variable_node.py  (+2 more)
assemblix-app-api/rules/: writing-tests.md
assemblix-app-api/tests/: __init__.py  conftest.py
(+604 files in other folders)
