[project]
name = "assemblix-api"
version = "0.2.9"
description = "Assemblix API — FastAPI backend for a visual workflow automation platform"
readme = "README.md"
# Source-available: MIT + Commons Clause (see ../LICENSE.md). Files marked
# LicenseRef-Assemblix-EE are commercial — see ../LICENSE_EE.md.
license = "LicenseRef-MIT-Commons-Clause"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
    "alembic>=1.13.0",
    "sqlalchemy>=2.0.45",
    "pwdlib[argon2]>=0.2.0",
    "pyjwt>=2.9.0",
    "cryptography>=43.0.0",
    "openai>=2.14.0",
    "google-genai>=1.0.0",
    "asyncpg>=0.31.0",
    "greenlet>=3.3.0",
    "cel-python>=0.4.0",
    "pytest-asyncio>=1.3.0",
    "litellm>=1.80.13",
    "httpx>=0.28.1",
    "python-dateutil>=2.9.0.post0",
    "google-auth>=2.45.0",
    "pdfplumber>=0.11.9",
    "structlog>=25.5.0",
    "asgi-correlation-id>=4.3.4",
    "pydantic-ai-slim[mcp,openai]>=1.107.0",
    "tenacity>=9.1.2",
    "redis>=5.3.1",
    "arq>=0.28.0",
    "prometheus-client>=0.25.0",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "websockets>=15.0.1",
    "av>=18.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "fakeredis>=2.36.2",
    "locust>=2.43.0",
    "mypy>=2.1.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.14.0",
    "respx>=0.21.1",
    "ruff>=0.15.17",
    "testcontainers>=4.0.0",
]

# ---------------------------------------------------------------------------
# Tooling configuration (Phase 1 — CI rails)
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py313"
line-length = 100
extend-exclude = ["alembic/versions", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "E501",   # line-too-long — handled by the formatter
    "B008",   # function-call-in-default — FastAPI Depends()/Query() idiom
    "E712",   # `== True/False` — intentional in SQLAlchemy filter expressions
    "UP042",  # keep `class X(str, Enum)` style (avoids StrEnum serialization drift)
]

[tool.ruff.lint.per-file-ignores]
# Tests favour readability over lint purity (unused fixtures, long asserts, etc.).
"tests/**" = ["B011", "SIM"]
# Deliberate late/conditional imports (forward refs, optional routers).
"assemblix_api/main.py" = ["E402"]
"assemblix_api/api/rest/payments.py" = ["E402"]
"assemblix_api/dto/responses/auth.py" = ["E402"]
"assemblix_api/dto/responses/execution.py" = ["E402"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = false
# Hard gate, but pragmatic: legacy modules are excluded per-module below and
# trimmed iteratively. New / cleaned modules are checked normally.
exclude = ["alembic/", "tasks/", "scripts/", "tests/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "external: tests that call paid/3rd-party APIs (LLMs); excluded in CI via -m 'not external'",
]

[tool.coverage.run]
source = ["assemblix_api"]
branch = true
omit = [
    "*/alembic/*",
    "*/tasks/*",
    "*/scripts/*",
    "*/tests/*",
]

[tool.coverage.report]
show_missing = true
# Calibrated to the blocking CI suite (tests/unit, 461 tests → 60% of the package).
# 70% is the growth target; raise this as integration coverage is wired into CI.
fail_under = 60

[tool.bandit]
exclude_dirs = ["tests", ".venv", "alembic"]
# B105/B106 only fire on false positives here (credential-TYPE labels like
# "openai_token", OAuth endpoint URLs, token_type="bearer"). Real leaked secrets
# are caught by gitleaks. B101 fires on `assert` used for type-narrowing of
# invariants (no security check depends on them). Other tests (B104/B110) are
# handled with inline # nosec.
skips = ["B101", "B105", "B106"]
